# ai-workflow-platform

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/ai_workflow_platform_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  2c7f4a91d8b2_add_step_execution_previews.py  7b8f0d4c3a21_add_workflow_webhook_id.py  9f4d2c8b7a10_add_step_executions.py  a3c4d5e6f7a8_add_switch_parent_step.py  b4f83c9a2d11_multiple_integration_instances.py  c6e8a41f0b23_parallel_foreach_foundation.py  cc1a1fab143e_initial_schema.py  (+3 more)
backend/app/: auth.py  config.py  database.py  dependencies.py  logging.py  main.py  memory.py
backend/app/engine/: executor.py  (+1 more)
backend/tests/: conftest.py  test_approval_timeouts.py  test_approvals.py  test_auth.py  test_cron.py  test_database_config.py  test_email_tool.py  test_engine.py  test_foreach_execution.py  test_integration_credentials.py  test_integrations_api.py  test_integrations_slack_discord.py  test_llm_normalizer.py  test_llm_providers.py  test_llm_registry.py  test_llm_routes.py  test_logging.py  test_parallel_foreach_schema.py  test_parallel_group_execution.py  test_provider_errors.py  test_queue_jobs.py  test_retry.py  test_run_timeline.py  test_step_execution_previews.py  test_switch_execution.py  test_template_renderer.py  test_tools.py  test_webhooks_v2.py  test_workflow_llm_steps.py  test_workflows.py
(+131 files in other folders)
